// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Playback abort should abort a paused test 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": "playback is dead",
    "state": "fatal",
  },
]
`;

exports[`Playback abort should abort a test 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": "playback is dead",
    "state": "fatal",
  },
]
`;

exports[`Playback abort should abort a test after attempting to stop 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": "playback is dead",
    "state": "fatal",
  },
]
`;

exports[`Playback pause on exceptions should pause for every type of error 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": "error",
    "state": "fatal",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": "error in verify",
    "state": "failed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": "error in assert",
    "state": "failed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "passed",
  },
]
`;

exports[`Playback pause on exceptions should pause until the command is fixed 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": "error",
    "state": "fatal",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": "error",
    "state": "fatal",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
]
`;

exports[`Playback resume resume a paused test 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "passed",
  },
]
`;

exports[`Playback resume resume after hitting a breakpoint 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 3,
    "message": undefined,
    "state": "passed",
  },
]
`;

exports[`Playback stop should stop a paused test 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "passed",
  },
]
`;

exports[`Playback stop should stop a test 1`] = `
Array [
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 1,
    "message": undefined,
    "state": "passed",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "pending",
  },
  Object {
    "callstackIndex": undefined,
    "id": 2,
    "message": undefined,
    "state": "passed",
  },
]
`;
